fix line spacing on home page

--- a/assets/SCSS/main.scss
+++ b/assets/SCSS/main.scss
@@ -34,6 +34,11 @@ header{
       color: $purple;
     }
   }
+  h1{
+    line-height: 1em;
+    margin-bottom: 5px;
+    margin-top: 10px;
+  }
 }
 
 .posts{
